# NL-VLM

./: .gitignore  LICENSE  README.md  pyproject.toml
data/airfoils/nasa_tilt_wing/: GA(W)_1.csv  NACA0020.csv
data/airfoils/nasa_uam_quadrotor/: BOEING_VERTOL_VR_12.csv  SIKORSKY_SSC_A09.csv
data/blades/apc10x7/: apc10x7_airfoildist.csv.bak
data/blades/cardona_tung/: cardona_tung_airfoildist.csv  cardona_tung_chorddist.csv  cardona_tung_pitchdist.csv  cardona_tung_sweepdist.csv
data/blades/dji_9443/: DJI9443_airfoildist.csv
data/blades/nasa_uam_quadrotor/: nasa_uam_quadrotor_airfoildist.csv  nasa_uam_quadrotor_chorddist.csv  nasa_uam_quadrotor_pitchdist.csv  nasa_uam_quadrotor_sweepdist.csv
data/polars/apc10x7/: polar_rR00000.csv  polar_rR03684.csv  polar_rR06842.csv  polar_rR08947.csv  polar_rR10000.csv
data/polars/cardona_tung/: polar_rR00000.csv  polar_rR02000.csv  polar_rR03000.csv  polar_rR05000.csv  polar_rR06800.csv  polar_rR07500.csv  polar_rR08000.csv  polar_rR08900.csv  polar_rR09600.csv  polar_rR10000.csv
data/polars/dji_9443/: polar_rR00000.csv  polar_rR00857.csv  polar_rR01857.csv  (+4 more)
notebooks/: nasa_uam_quadrotor.ipynb  peak_moment.ipynb  susceptibility_matrix_quadrotor.ipynb  susceptibility_matrix_wing.ipynb
notebooks/windfield/: windfield_components.ipynb  windfield_cross_section.ipynb  windfield_isovolume.ipynb  windfield_jacobian_components.ipynb  windfield_snapshots.ipynb
src/nl_vlm/: __init__.py  reporting.py
tools/xfoil/: xfoil_log.txt
validation/: cardona_tung_validation.ipynb  dji9443_validation.ipynb  mesh_convergence.py
(+31 files in other folders)
