[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nl-vlm"
version = "0.1.0"
description = "Nonlinear vortex-lattice method for rotor/propeller aerodynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pyvista",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
